--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dinecloud-server-domainmodel",
+  "name": "dinecloud_server_domainmodel",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,6 +8,11 @@
     "email": "naman22khater@gmail.com"
   },
   "scripts": {
+    "docker:build": "docker build -t dinecloud-server-domainmodel:latest .",
+    "docker:push": "docker push rectangletechnologies/dinecloud-server-domainmodel:latest",
+    "docker:run": "docker run -d -p 6000:6000 --env-file .env --name dinecloud-server-domainmodel --memory=\"256m\" --cpus=0.5 dinecloud-server-domainmodel:latest",
+    "docker:run:prod": "docker run -d -p 6000:6000 --env-file .env --name dinecloud-server-domainmodel --memory=\"256m\" --cpus=0.5 rectangletechnologies/dinecloud-server-domainmodel:latest",
+    "docker:tag": "docker tag dinecloud-server-domainmodel:latest rectangletechnologies/dinecloud-server-domainmodel:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
