--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "@nds-core/domain-model-engine": "^1.0.0",
     "@netra-development-solutions/json_validation_engine-lib": "^1.0.3",
     "@netra-development-solutions/utils.crypto.jsonwebtoken": "^1.1.0",
     "body-parser": "^1.20.2",
